--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       - echo rename image
       - docker tag giorep:latest 778404080221.dkr.ecr.us-east-1.amazonaws.com/giorep:latest
       - docker push 778404080221.dkr.ecr.us-east-1.amazonaws.com/giorep:latest
-      - printf '[{"name":"Giopipeline","imageUri":"%s"}]' $REPO_URI:$IMAGE_TAG > Giopipeline-imagedefinitions.json
+      - printf '[{"name":"giocont","imageUri":"%s"}]' $REPO_URI:$IMAGE_TAG > Giopipeline-imagedefinitions.json
       - docker image ls
   post_build:
     commands:
