--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   pre_build:
     commands:
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 778404080221.dkr.ecr.us-east-1.amazonaws.com
-      - REPO_URI=778404080221.dkr.ecr.eu-central-1.amazonaws.com/giorep
+      - REPO_URI=778404080221.dkr.ecr.us-east-1.amazonaws.com/giorep
       - IMAGE_TAG=$(echo $VERSION.$CODEBUILD_BUILD_NUMBER)
   build:
     commands:
@@ -11,7 +11,7 @@ phases:
       - echo rename image
       - docker tag giorep:latest 778404080221.dkr.ecr.us-east-1.amazonaws.com/giorep:latest
       - docker push 778404080221.dkr.ecr.us-east-1.amazonaws.com/giorep:latest
-      - printf '[{"name":"giotask","imageUri":"%s"}]' $REPO_URI:$IMAGE_TAG > Giopipeline-imagedefinitions.json
+      - printf '[{"name":"giocont","imageUri":"%s"}]' $REPO_URI:$IMAGE_TAG > Giopipeline-imagedefinitions.json
       - docker image ls
   post_build:
     commands:
