--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - IMAGE_TAG=$(echo $VERSION.$CODEBUILD_BUILD_NUMBER)
   build:
     commands:
-      - docker build -t giorep .
+      - docker build -t giorep:latest .
       - echo rename image
       - docker tag giorep:latest 778404080221.dkr.ecr.us-east-1.amazonaws.com/giorep:latest
       - docker push 778404080221.dkr.ecr.us-east-1.amazonaws.com/giorep:latest
